# lab06-lastrobotstanding-comme_tu_veux

./: CMakeLists.txt  README.md  action.cpp  action.h  game.cpp  game.h  main.cpp  point.cpp  point.h  robot_state.cpp  robot_state.h
include/: action_msg.h  bonus.h  bonus_state.h  game.h  robot_state.h  state.h
robots/: SonnyRobot.cpp  SonnyRobot.h  action.cpp  action.h  robot_action_msg.cpp  robot_action_msg.h  sonny_robot.cpp  sonny_robot.h
src/: action.cpp  action_msg.cpp  bonus.cpp  bonus_state.cpp  game.cpp  main.cpp  point.cpp  robot_state.cpp  state.cpp
